--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartMap.StartMap
 EditorStartupMap=/Game/Maps/Test.Test
@@ -72,7 +70,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
-
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
@@ -85,7 +82,7 @@ SteamDevAppId=480
 bInitServerOnClient=true
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
-NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+NetConnectionClassName=OnlineSubsystemSteam.SteamNetConnection
 
 [/Script/UnrealEd.HierarchicalLODSettings]
 bForceSettingsInAllMaps=False
@@ -97,5 +94,10 @@ BaseMaterial=None
 NetServerMaxTickRate=60
 
 [PacketSimulationSettings]
-PktLag = 0
+PktLag=0
+
+[/Script/NavigationSystem.RecastNavMesh]
+
+[/Script/NavigationSystem.NavigationSystemV1]
+bGenerateNavigationOnlyAroundNavigationInvokers=False
 
