--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/Maps/StartMap.StartMap
 EditorStartupMap=/Game/Maps/Occupy.Occupy
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
+GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_PolyWarGameMode.BP_PolyWarGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
